[package]
name = "TextService"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
simple-logging = "2"
log = "0.4"
winreg = "0.11"
variant-rs = "0.3"

[dependencies.windows]
version = "0.48"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
embed-resource = "1.8"
