[package]
name = "TextService"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
simple-logging = "2"
log = "0.4"
windows-core = "0.58.0"
winreg = "0.52"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
embed-resource = "2.4"
